schema/testdata/errors/model_names_max_lenght.keel
//expect-error:7:51:E053:Cannot use 'ALongLongLongLongLongModelNameThatIsVeryLong' as a model name as it is too long.
model ALongLongLongLongLongModelNameThatIsVeryLong {
    fields {
        foo Text
    }
}

model ALongLongLongLongModelNameThatNotVeryLong {
    fields {
        foo Text
    }
}

//expect-error:6:50:E053:Cannot use 'ALongLongLongLongLongTasksNameThatIsVeryLong' as a task name as it is too long.
task ALongLongLongLongLongTasksNameThatIsVeryLong {
    fields {
        foo Text
    }
}

task ALongLongLongLongTasksNameThatNotVeryLong {
    fields {
        foo Text
    }
}
